MD Extensions: Add devtools in error-console.

This CL ports over the runtime error stack-trace and dev-view button
that existed in the old extensions page.

Bug: 768609
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I80fc989ca0b3bcc8af7483a2f475e673e2476674
Reviewed-on: https://chromium-review.googlesource.com/691181
Commit-Queue: Scott Chen <scottchen@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Cr-Commit-Position: refs/heads/master@{#506873}
Former-commit-id: 3eba56ae7194a05df49230ce8c989fa34832ed5b